fix bug on upload image and overflow-x

--- a/src/components/LargeCardMyEvent/index.css
+++ b/src/components/LargeCardMyEvent/index.css
@@ -9,7 +9,7 @@
 }
 
 
-.headText-badge {
+.headTextBadge {
     font-weight: 400;
     font-size: 14px;
     padding: 0 10px;
@@ -75,20 +75,24 @@
 
 }
 
-.image-avatar {
+/* .imageAvatar {
     width: 84px;
     height: 84px;
     border-radius: 50%;
     border: solid 5px white;
     top: -100px;
     left: 80px;
-}
+} */
 
-.image-avatar img {
-    width: 100%;
-    height: 100%;
+.imageAvatar img {
+    width: 84px;
+    height: 84px;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius:50% ;
+    -webkit-border-radius:50% ;
+    -moz-border-radius:50% ;
+    -ms-border-radius:50% ;
+    -o-border-radius:50% ;
 }
 
 .button-card {
