--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -1,13 +1,17 @@
 .wrapper{
    max-height: 300px;
-   border: 1px solid black;
+   border: 1px solid rgb(216, 216, 216);
+   border-radius: 3px;
    display: flex;
    justify-content: space-between;
    overflow-x: scroll;
    width: 800px;
-
+   -webkit-border-radius: 3px;
+   -moz-border-radius: 3px;
+   -ms-border-radius: 3px;
+   -o-border-radius: 3px;
 }
 
-.floatLeft{
-    
+.wrapper::-webkit-scrollbar{
+   width: 0;
 }
